cmake_minimum_required(VERSION 3.21)
project(DPmasterchallenge)
set(CMAKE_CXX_STANDARD 17)
add_executable(coding 15681.cpp 9465.cpp 9465_bot.cpp 2294.cpp 2294_bot.cpp 2193.cpp 11052.cpp 16500.cpp 16500_bot.cpp 1149.cpp 1149_top.cpp 2533.cpp 2248.cpp 9252.cpp 2213.cpp 2494.cpp 2494_bot.cpp 1023.cpp 2201.cpp 2291.cpp)