cmake_minimum_required(VERSION 3.20)
project(Mario_backtracking)

set(CMAKE_CXX_STANDARD 17)

add_executable(coding main.cpp 1759.cpp 1987.cpp 9663.cpp 2580.cpp 2580_another.cpp 10597.cpp 2661.cpp 17136.cpp 1189.cpp 1405.cpp 1339.cpp 1339_greedy.cpp 1182.cpp 10971.cpp 16987.cpp 14712.cpp 14888.cpp 1174.cpp 18430.cpp 6443.cpp 1062.cpp 3980.cpp 22944.cpp 1799.cpp)
