cmake_minimum_required(VERSION 3.20)
project(Mario_backtracking)

set(CMAKE_CXX_STANDARD 17)

add_executable(coding main.cpp 1759.cpp 1987.cpp 9663.cpp 2580.cpp 2580_another.cpp 10597.cpp 2661.cpp 17136.cpp 1189.cpp 1405.cpp 1339.cpp 1339_greedy.cpp 1182.cpp 10971.cpp 16987.cpp 14712.cpp 14888.cpp 1174.cpp 18430.cpp 6443.cpp 1062.cpp 3980.cpp 22944.cpp 1799.cpp 15654.cpp 15655.cpp 15656.cpp 15657.cpp 15664.cpp 15665.cpp 15666.cpp 1062_bit.cpp 10974.cpp 16922.cpp 18429.cpp 19949.cpp 6987.cpp 19942.cpp 1038.cpp 2023.cpp 7490.cpp)
