cmake_minimum_required(VERSION 3.20)
project(Mario_backtracking)

set(CMAKE_CXX_STANDARD 17)


add_executable(1182 1182.cpp)
add_executable(1759 1759.cpp)
add_executable(1987 1987.cpp)
add_executable(14712 14712.cpp)
add_executable(17136 17136.cpp)
add_executable(16987 16987.cpp)
add_executable(1729 1729.cpp)
add_executable(1941 1941.cpp)