cmake_minimum_required(VERSION 3.20.2)
project(Mario_binary_search)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_FLAGS "-fexec-charset=CP949")

add_executable(coding 2805.cpp 2343.cpp 6236.cpp 1654.cpp 16434.cpp 15732.cpp 1300.cpp 1920.cpp 10816.cpp 1072.cpp 1114.cpp my_1114.cpp binary_search.cpp 18870.cpp 2295.cpp 13777.cpp 1789.cpp 2417.cpp 10815.cpp 2512.cpp 19637.cpp 11663.cpp 3079.cpp 22871.cpp 22871_bin_search.cpp 2110.cpp 20444.cpp 1477.cpp 1939.cpp 1939_dfs.cpp 1939_dijkstra.cpp 2473_bin_search.cpp 2473_twopointer.cpp 13397.cpp 2412.cpp my_2412.cpp 2412_bin_search.cpp 7453.cpp)
