cmake_minimum_required(VERSION 3.20.2)
project(Mario_binary_search)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_FLAGS "-fexec-charset=CP949")


add_executable(1939 1939.cpp)
add_executable(2805 2805.cpp)
add_executable(19637 19637.cpp)
add_executable(11663 11663.cpp)
add_executable(2110 2110.cpp)
add_executable(3079 3079.cpp)
add_executable(20444 20444.cpp)
add_executable(1477 1477.cpp)
add_executable(1939_dfs 1939_dfs.cpp)
add_executable(1939_dijkstra 1939_dijkstra.cpp)
add_executable(1939_disjoint 1939_disjoint.cpp)
add_executable(13397 13397.cpp)
add_executable(2412 2412.cpp)
add_executable(1300 1300.cpp)
add_executable(7453 7453.cpp)