cmake_minimum_required(VERSION 3.20.2)
project(Mario)

set(CMAKE_CXX_STANDARD 17)

add_executable(coding 1912.cpp 2309.cpp 2231.cpp 1018.cpp 4796.cpp 17509.cpp 1931.cpp 1700.cpp 2212.cpp 13904.cpp 15748.cpp 1493.cpp best_1493.cpp 3085.cpp 10448.cpp 2503.cpp 1182.cpp 1007.cpp 15649.cpp 1025.cpp 22864.cpp 19532.cpp 18312.cpp 15721.cpp 1969.cpp 2422.cpp 5568.cpp 18511.cpp 17626.cpp 9079.cpp 16937.cpp 16439.cpp 14501.cpp 2615.cpp 16508.cpp 14620.cpp 1548.cpp 2961.cpp 15661.cpp 12919.cpp 14500.cpp 15686.cpp 21278.cpp 21315.cpp 21315_another.cpp 16637.cpp 14391.cpp 14391_bit.cpp 18808.cpp 21943.cpp 11047.cpp 2217.cpp 1026.cpp 13305.cpp 1758.cpp 11508.cpp 11399.cpp 20115.cpp 20300.cpp 1541.cpp 20365.cpp 21758.cpp 11000.cpp 13164.cpp 19598.cpp 1092.cpp 2141.cpp 2812.cpp 13975.cpp 1715.cpp 8980.cpp 15652.cpp 15650.cpp 14888.cpp 9663.cpp 1759.cpp 15663.cpp 15651.cpp)
