cmake_minimum_required(VERSION 3.21)
project(Mario_dataStructure)

set(CMAKE_CXX_STANDARD 17)

add_executable(coding 10828.cpp 9012.cpp 18258.cpp 2164.cpp 1874.cpp 10799.cpp 2346.cpp 2504.cpp 2800.cpp 2493.cpp 22942.cpp 1918.cpp 14425.cpp Trie_14425.cpp 11279.cpp 7662.cpp 2075.cpp 21939.cpp 21944.cpp 2696.cpp 21942.cpp 21942_best.cpp)
