cmake_minimum_required(VERSION 3.20)
project(Mario_dijkstra)

set(CMAKE_CXX_STANDARD 17)


add_executable(1753 1753.cpp)
add_executable(1504 1504.cpp)
add_executable(4485 4485.cpp)
add_executable(15422 15422.cpp)
add_executable(1238 1238.cpp)
add_executable(10473 10473.cpp)
add_executable(2211 2211.cpp)
add_executable(16681 16681.cpp)
add_executable(5719 5719.cpp)
add_executable(1162 1162.cpp)
add_executable(10217 10217.cpp)