cmake_minimum_required(VERSION 3.20.2)
project(Mario_dp)

set(CMAKE_CXX_STANDARD 17)

add_executable(1106 1106.cpp)
add_executable(2293 2293.cpp)
add_executable(14852 14852.cpp)
add_executable(2565 2565.cpp)
add_executable(14722 14722.cpp)
add_executable(9084 9084.cpp)
add_executable(12865 12865.cpp)
add_executable(12865_bot 12865_bot.cpp)
add_executable(9251 9251.cpp)
add_executable(2225 2225.cpp)
add_executable(2624_bot 2624_bot.cpp)
add_executable(14567 14567.cpp)
add_executable(17485 17485.cpp)
add_executable(21941 21941.cpp)
add_executable(21941_botup 21941_botup.cpp)
add_executable(18427 18427.cpp)
add_executable(2533 2533.cpp)
add_executable(2213 2213.cpp)
add_executable(17831 17831.cpp)
add_executable(2058 2058.cpp)
add_executable(12978 12978.cpp)
add_executable(1135 1135.cpp)
add_executable(2839 2839.cpp)
add_executable(2748 2748.cpp)
add_executable(1010 1010.cpp)
add_executable(9655 9655.cpp)
add_executable(1463 1463.cpp)
add_executable(1463_bot 1463_bot.cpp)
add_executable(15624 15624.cpp)
add_executable(2491 2491.cpp)
add_executable(14501 14501.cpp)
add_executable(14501_bot 14501_bot.cpp)
add_executable(1699 1699.cpp)
add_executable(1699_bot 1699_bot.cpp)
add_executable(2631 2631.cpp)
add_executable(2624 2624.cpp)
add_executable(2228 2228.cpp)
add_executable(2228_top_down 2228_top_down.cpp)
add_executable(2073 2073.cpp)
add_executable(1695 1695.cpp)
add_executable(1695_bot 1695_bot.cpp)
add_executable(1005 1005.cpp)
add_executable(1958 1958.cpp)
add_executable(1727 1727.cpp)