cmake_minimum_required(VERSION 3.20)
project(Mario_floyd)

set(CMAKE_CXX_STANDARD 17)


add_executable(11404 11404.cpp)
add_executable(11403 11403.cpp)
add_executable(1613 1613.cpp)
add_executable(2610 2610.cpp)
add_executable(1956 1956.cpp)
add_executable(13168 13168.cpp)
add_executable(9205 9205.cpp)
add_executable(2458 2458.cpp)