cmake_minimum_required(VERSION 3.20)
project(Mario_greedy)

set(CMAKE_CXX_STANDARD 17)


add_executable(4796 4796.cpp)
add_executable(1449 1449.cpp)
add_executable(17509 17509.cpp)
add_executable(11047 11047.cpp)
add_executable(1700 1700.cpp)
add_executable(13904 13904.cpp)
add_executable(15748 15748.cpp)
add_executable(1493 1493.cpp)