cmake_minimum_required(VERSION 3.20)
project(coding)

set(CMAKE_CXX_STANDARD 17)

add_executable(coding 15999.cpp 16000.cpp
        13460.cpp 12100.cpp ans_13460.cpp
        short_coding_2910.cpp 3758.cpp 9322.cpp 10453.cpp
        KaKaoFriends.cpp 10655.cpp 10703.cpp
        best_2072.cpp my_2504.cpp 3019.cpp 4307.cpp short_coding_4307.cpp
        8911.cpp 10997.cpp 12842.cpp 12842_bin_search.cpp 10994.cpp 14569.cpp 14569_bitmask.cpp
        15460.cpp 22869.cpp 15658.cpp NqueenProblem.cpp 15787.cpp best_15787.cpp 16113.cpp
        16923.cpp 16924.cpp 16926.cpp 16935.cpp 17827.cpp 17829.cpp 21314.cpp
        best_2564.cpp 4172.cpp 4929.cpp 8901.cpp
        9011.cpp 9081.cpp best_9081.cpp 9519.cpp 14719.cpp 16719.cpp 20164.cpp 22856.cpp)
