cmake_minimum_required(VERSION 3.20)
project(Mario_tree)

set(CMAKE_CXX_STANDARD 17)

add_executable(coding 1991.cpp 11725.cpp 4803.cpp 1068.cpp 16437.cpp 2250.cpp 2250_best.cpp 4256.cpp 4256_best.cpp 1967.cpp 1949.cpp 2533.cpp 3482.cpp 2263.cpp 2407.cpp 5639.cpp 15900.cpp 20364.cpp 3584.cpp 1240.cpp 9489.cpp 15681.cpp 14267.cpp)
