cmake_minimum_required(VERSION 3.20)
project(Mario_tree)

set(CMAKE_CXX_STANDARD 17)


add_executable(1068 1068.cpp)
add_executable(5639 5639.cpp)
add_executable(6416 6416.cpp)
add_executable(14675 14675.cpp)
add_executable(17073 17073.cpp)
add_executable(1967 1967.cpp)
add_executable(9489 9489.cpp)
add_executable(20924 20924.cpp)
add_executable(4256 4256.cpp)
add_executable(4803 4803.cpp)
add_executable(16437 16437.cpp)
add_executable(2250 2250.cpp)
add_executable(3482 3482.cpp)
add_executable(19542 19542.cpp)
add_executable(4933 4933.cpp)