cmake_minimum_required(VERSION 3.20)
project(Mario_twopointer)

set(CMAKE_CXX_STANDARD 17)

add_executable(coding 2003.cpp 2075.cpp 2096.cpp 1644.cpp 1806.cpp 2230.cpp 1484.cpp 2038.cpp 2531.cpp 2293.cpp 2470.cpp best_2470.cpp 11728.cpp 21921.cpp 20922.cpp 22862.cpp 15961.cpp 3151.cpp 3151_bin.cpp 22945.cpp 20366.cpp 20422.cpp 7453.cpp 21279.cpp)
