cmake_minimum_required(VERSION 3.20)
project(Mario_twopointer)

set(CMAKE_CXX_STANDARD 17)


add_executable(21921 21921.cpp)
add_executable(20922 20922.cpp)
add_executable(22862 22862.cpp)
add_executable(2470 2470.cpp)
add_executable(15961 15961.cpp)
add_executable(2096 2096.cpp)
add_executable(1484 1484.cpp)
add_executable(1644 1644.cpp)
add_executable(2038 2038.cpp)