cmake_minimum_required(VERSION 3.20.2)
project(Mario_union_find)

set(CMAKE_CXX_STANDARD 17)

add_executable(coding 1717.cpp 1976.cpp 16562.cpp 4195.cpp 14868.cpp 3197.cpp 11085.cpp 9938.cpp 10775_other.cpp 15459.cpp 15459_union.cpp Union-Find.cpp 18116.cpp 10775.cpp 11085_union.cpp 16724.cpp 16724_dfs.cpp)
