cmake_minimum_required(VERSION 3.22)
project(kakao2022_summer)

set(CMAKE_CXX_STANDARD 17)

add_executable(2 2.cpp)
add_executable(4 4.cpp)
add_executable(5 5.cpp)
add_executable(1 1.cpp)
add_executable(4_dijk_parametric 4_dijk_parametric.cpp)
add_executable(MaxHeap MaxHeap.cpp)
add_executable(BST BST.cpp)
add_executable(SORT SORT.cpp)
add_executable(DP DP.cpp)
add_executable(Queue_generic Queue_generic.cpp)
add_executable(STACK STACK.cpp)
add_executable(TREE TREE.cpp)
add_executable(stacktoQueue 스택2개로큐구현.cpp)
add_executable(2178 2178.cpp)
add_executable(BFS_DFS BFS_DFS.cpp)
add_executable(kruskal kruskal.cpp)
add_executable(Prim Prim.cpp)
add_executable(dfs_stack dfs_stack.cpp)