cmake_minimum_required(VERSION 3.20)
project(segment)

set(CMAKE_CXX_STANDARD 17)


add_executable(2042 2042.cpp)
add_executable(1275 1275.cpp)
add_executable(12015 12015.cpp)
add_executable(12015_bin 12015_bin.cpp)
add_executable(11505 11505.cpp)
add_executable(2357 2357.cpp)
add_executable(2268 2268.cpp)
add_executable(3745 3745.cpp)
add_executable(3006 3006.cpp)